--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,12 +30,19 @@
                 android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/tool_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_scrollFlags="scroll|enterAlways"
-                    android:background="?attr/colorPrimary" />
+                <LinearLayout
+                    android:id="@+id/layout_image"
+                    android:layout_width="fill_parent"
+                    android:layout_height="100dp"
+                    app:layout_scrollFlags="scroll" >
+
+                    <TextView
+                        android:id="@+id/image"
+                        android:layout_width="fill_parent"
+                        android:layout_height="100dp"
+                        android:gravity="center"
+                        android:text="121212122222222" />
+                </LinearLayout>
 
                 <android.support.design.widget.TabLayout
                     android:id="@+id/tab_layout"
