--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,11 +4,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <!-- Customize your theme here. -->
+        <item name="android:listDivider">@drawable/divider_bg</item>
         <item name="colorPrimary">#34A2DA</item>
         <item name="colorPrimaryDark">#1785C6</item>
+
         <!--
         <item name="colorAccent">#FF4081</item>
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@android:color/white</item>
         -->
     </style>
 
